# api-gateway/api/docs/swagger.json
@@ -922,10 +922,10 @@
         "genprotos.PollCreateReq_Option": {
             "type": "object",
             "properties": {
-                "key": {
-                    "type": "string"
+                "ball": {
+                    "type": "integer"
                 },
-                "value": {
+                "variant": {
                     "type": "string"
                 }
             }
@@ -1140,6 +1140,9 @@
                     "type": "string"
                 },
                 "refresh_token": {
+                    "type": "string"
+                },
+                "role": {
                     "type": "string"
                 }
             }
